# tabfm-financial-risk-benchmark

./: .gitignore  ARTICLE.md  ARTICLE_V2.md  OBJECTIVES.md  PAPER.md  README.md  pyproject.toml  requirements.txt
configs/: datasets.yaml
notebooks/: run_on_colab.ipynb
results/: prediction_agreement.jsonl  results.csv  results.jsonl  results_tuned.csv  results_tuned.jsonl  robustness.csv  robustness.jsonl  robustness_tuned.csv  robustness_tuned.jsonl  shap_agreement.jsonl  tuned_best_params.csv  tuned_best_params.jsonl
scripts/: check_robustness_coverage.py  generate_article_figures_tabfm_only.py  generate_cover_image.py  generate_paper_figures.py  generate_table_images_other.py  generate_table_predictive_performance.py  run_benchmark.py  run_robustness.py  run_robustness_tuned.py  tune_classical.py
src/tabfm_bench/: agreement.py  cost.py  data.py  explain.py  fairness.py  metrics.py  models.py  robustness.py  run.py
tests/: test_smoke.py
